class DictionaryEntry {
  final String character;
  final String word;
  final String translation;

  DictionaryEntry({
    required this.character,
    required this.word,
    required this.translation,
  });

  static List<DictionaryEntry> sampleEntries = [
    DictionaryEntry(
      character: "太陽",
      word: "Tai-yo",
      translation: "Sun",
    ),
    DictionaryEntry(
      character: "太陽",
      word: "Tai-yo",
      translation: "Sun",
    ),
    DictionaryEntry(
      character: "太陽",
      word: "Tai-yo",
      translation: "Sun",
    ),
    DictionaryEntry(
      character: "太陽",
      word: "Tai-yo",
      translation: "Sun",
    ),
  ];
}